--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -13,6 +13,9 @@
   .codes .lt_cnt .toggle>ul>li>ul>li{font-size:13px;padding:5px 10px;list-style: decimal;color:#3d3d3d;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#08f;display:block;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a>span{font-size:13px;}
+  .codes .lt_cnt .toggle>ul>.last7days{display:none;}
+  .codes .lt_cnt .last7days_pc>p{padding:8px 0;border-bottom:1px solid #3d3d3d;} 
+  .codes .lt_cnt .last7days_pc>ul>li>a{text-decoration:none;color:#08f;display:block;font-size:15px;padding:5px;}
 
   .codes .lt_cnt .today_code{padding:8px 0;background:#000;margin:5px 0;text-align:center;}
   .codes .lt_cnt .today_code a{text-decoration:none;color:#fff;display:block;}
@@ -59,6 +62,7 @@
   .codes .lt_cnt .toggle>ul>li>ul{display:none;list-style:decimal;padding-left:17px;}
   .codes .lt_cnt .toggle>ul>li>ul>li{padding:5px 10px;list-style: decimal;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#08f;display:block;}
+  .codes .lt_cnt .last7days_pc{display:none;}
 
   .codes .lt_cnt .today_code{padding:8px 0;background:#000;margin:5px 0;text-align:center;}
   .codes .lt_cnt .today_code a{text-decoration:none;color:#fff;display:block;}
