--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,187 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="60" data-price="43.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HcWD5M"><img src="https://m.media-amazon.com/images/I/71F8QCL0riL._SR400,400_.jpg" alt="viewBluetooth Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HcWD5M">Click image to open expanded viewBluetooth Headphones DULLA True Wireless Noise Cancelling Earphones Sweatproof Waterproof with Microphone Earbuds</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $43.99</strong> using code:<strong><strong>60KLTQGD</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HcWD5M">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HfWyhM"><img src="https://m.media-amazon.com/images/I/61T9g4fmwhL._SR400,400_.jpg" alt="ZealSound Waterproof Bluetooth Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HfWyhM">ZealSound Waterproof Bluetooth Speakers Outdoor Wireless Portable Speaker</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>65% off at $49.99</strong> using code:<strong><strong>65QBIZYZ</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HfWyhM">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2E2QSFR"><img src="https://m.media-amazon.com/images/I/51WDMPem3fL._SR400,400_.jpg" alt="NTONPOWER Travel Adapters Power Strip" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2E2QSFR">NTONPOWER Travel Adapters Power Strip | 3 USB Ports Charging Station 2 Outlets with 3 International Power Adapters 5ft Power Cord</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $20.99</strong> using code:<strong><strong>40F3B3NE</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2E2QSFR">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LBgCzm"><img src="https://m.media-amazon.com/images/I/71wSuNVCtvL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth 5.0 Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LBgCzm">True Wireless Earbuds Bluetooth 5.0 Headphones, Sports in-Ear TWS Stereo Mini Headset w/Mic Extra Bass IPX5 Sweatproof Low Latency Instant Pairing 15H Battery...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $49.99</strong> using code:<strong><strong>20STEVIES</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LBgCzm">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="38.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YkmVsl"><img src="https://m.media-amazon.com/images/I/61dB1QnOGSL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YkmVsl">G-FAVOR Laptop Backpack Business Travel Backpack with USB Charging Port Water Resistant Casual Daypack College School Computer Backpacks</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $38.99</strong> using code:<strong><strong>50N2XO4G</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YkmVsl">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vTpTIe"><img src="https://m.media-amazon.com/images/I/6191Dcyn0XL._SR400,400_.jpg" alt="BINWO Headlamp Rechargeable" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vTpTIe">BINWO Headlamp Rechargeable, Headlamp Flashlight 1800 Lumen, Headlamps Xtreme Bright</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $20.99</strong> using code:<strong><strong>405QK2FH</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vTpTIe">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="38.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JEqQMN"><img src="https://m.media-amazon.com/images/I/71yCxdC8c2L._SR400,400_.jpg" alt="Binwo Flashlights" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JEqQMN">Binwo Flashlights - Super Bright 2000 Lumen XML T6 LED Flashlights Portable Outdoor Water Resistant Torch Light</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $38.99</strong> using code:<strong><strong>40WDLT73</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JEqQMN">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jtybyy"><img src="https://m.media-amazon.com/images/I/61LDyDVUBzL._SR400,400_.jpg" alt="MOES WiFi Smart Light Switch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jtybyy">MOES WiFi Smart Light Switch,Smart Life/Tuya APP Remote Control,Compatible with Alexa Google Home</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $21.99</strong> using code:<strong><strong>30CU1IRI</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Jtybyy">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JGoRHR"><img src="https://m.media-amazon.com/images/I/61RV8qmQKsL._SR400,400_.jpg" alt="Ultralight Inflating Travel Pillow" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JGoRHR">WONYERED Ultralight Inflating Travel Pillow Support Inflatable Compressible Compact Air Travel Pillow</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $16.99</strong> using code:<strong><strong>promo_code</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JGoRHR">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="65.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LQhSif"><img src="https://m.media-amazon.com/images/I/815VGfGT6HL._SR400,400_.jpg" alt="Action Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LQhSif">Action Camera, ZONKO 4K Ultra HD WiFi Sports Camera, 12MP 170 Degree Wide-Angle Lens</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $65.99</strong> using code:<strong><strong>305QH7G7</strong></strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LQhSif">Use Code</a>
+  </div>
+</div>
+
+
 <div class="card clearfix" data-score="50" data-price="39.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2He2iIM"><img src="https://m.media-amazon.com/images/I/51C9B7uHtmL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
