--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -49,7 +49,7 @@
 .featured .sm_pc .filter-search li{margin:5px 0;text-align:center;}
 .featured .sm_pc .filter-search li a{text-decoration:none;}
 .featured .sm_pc .filter-button{font-family: 'Anton', sans-serif;line-height:1.1;font-size:45px;color:#000;width:100%;}
-.featured .sm_pc .filter-button:hover{background:#fff;color:#000;}
+/*.featured .sm_pc .filter-button:hover{background:#fff;color:#000;}*/
 
 .featured .gift_guide{border-bottom:1px solid #ccc;padding-bottom:10px;margin-bottom:20px;}
 .featured .gift_guide .gift_box{float:left;width:31.33%;height:250px;margin:10px 1%;}
