--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -30,7 +30,7 @@
                 <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
               </ul>
             </li>
-            <li>
+            <li class="last7days">
               <a href="#n">LAST 7 DAYS CODES LIST</a>
               <ul>
                 <%= render 'shared/promocodes_days' %>
@@ -38,6 +38,12 @@
             </li>
           </ul>
         </div><!--./toggle-->
+        <div class="last7days_pc">
+          <p>LAST 7 DAYS CODES LIST</p>
+          <ul>
+            <%= render 'shared/promocodes_days' %>
+          </ul>
+        </div>
         
         <div class="lt_sort_box clearfix">
           <ul class="clearfix">
