--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -1,39 +1,40 @@
 <div class="blog_box clearfix">
+  <div class="date">
+    <em>May</em>
+    <p>12</p>
+  </div>
+  <div class="image">
+    <span>May.12</span>
+    <a href="/blogs/blog_02"><img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime" /></a>
+  </div>
+  <div class="inner">
+    <h3><a href="/blogs/blog_02">How to sign up & cancel Amazon Prime free 30-day trial</a></h3>
+    <p>Do you have account of Amaozn? If you have it, you could sign up for Amazon Prime and it's as easy as signing up your account in the first place.But if you’re new to Amazon, don’t worry, just follow the step-by-step instructions.</p>
+    <div class="more_btn">
+      <a href="/blogs/blog_02">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
+    </div>
+  </div>
+</div>
+
+<div class="blog_box clearfix">
 	<div class="date">
-		<em>FEB</em>
-		<p>20</p>
+		<em>Apr</em>
+		<p>25</p>
 	</div>
 	<div class="image">
-		<span>FEB.19</span>
+		<span>Apr.25</span>
 		<a href="/blogs/blog_01"><img src="https://icdn2.digitaltrends.com/image/amazon-prime-day-packages-3-720x720.jpg" alt="Amazon Prime"></a>
 	</div>
 	<div class="inner">
 		<h3><a href="/blogs/blog_01">"All About The Amazon Prime"</a></h3>
 		<p>Amazon Prime is a paid subscription service($119 per year currently, plus a free 30-day trial or $12.99 per month) offered by Amazon that gives users access to free two-day delivery (one-day in some areas), streaming video and music, and other benefits for a monthly or yearly fee.</p>
 		<div class="more_btn">
-			<a href="/blogs/blog_01">See more detail
-			<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
+			<a href="/blogs/blog_01">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
 		</div>
 	</div>
 </div>
 
-<!-- <div class="blog_box clearfix">
-  <div class="date">
-    <em>Month</em>
-    <p>Date</p>
-  </div>
-  <div class="image">
-    <span>Month.date</span>
-    <a href="#n"><img src="Image_Url" alt="" /></a>
-  </div>
-  <div class="inner">
-    <h3><a href="#n">Blog_intro</p>
-    <div class="more_btn">
-      <a href="#n">See more detail
-      <img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
-    </div>
-  </div>
-</div> -->
+
 
 <!-- <div class="blog_box clearfix">
 	<div class="date">
@@ -45,10 +46,10 @@
 		<a href="#n"><img src="Image_Url" alt="" /></a>
 	</div>
 	<div class="inner">
-		<h3><a href="#n">Blog_intro</p>
+		<h3><a href="#n">Blog_Title</a</h3>
+    <p>Blog_description</p>
 		<div class="more_btn">
-			<a href="#n">See more detail
-			<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
+			<a href="#n">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
 		</div>
 	</div>
 </div> -->
