--- a/app/views/blogs/blog_02.html.erb
+++ b/app/views/blogs/blog_02.html.erb
@@ -1,146 +1,157 @@
 <div class="layout"><!--layout-->
   <%= render 'shared/header' %>
-  
-  <div class="blog_02 clearfix">
+  <div class="blogs clearfix">
     <div class="wrap">
-      
-      <!-- <div class="detitle for_blog">
-        <%= @lotto %>
-      </div> -->
-      
-      <div class="blog_wrap clearfix">
-        <div class="cnt_wrap clearfix">
+
+      <div class="blog_body">
+
+        <div class="blog_tit">
+          <h2><span>How to sign up & cancel Amazon Prime free 30-day trial</span></h2>
+          <p>Do you have account of Amazon? If you have it, you could upgrade to Amazon Prime and it's as easy as signing up your account in the first place. But if you’re new to Amazon, don’t worry, just follow the step-by-step instructions below.</p>
+          <div class="inner_btn">
+            <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
+            <a target="_blank" href="/blogs/blog_01">Amazon Prime Benefits</a>
+          </div>
+          <img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime">
+        </div>
+         
+        <div class="blog2sub_title"> 
+         <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
+        </div>
+        
+        <div class="blog_ctn">
           <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/995747355CD318F403">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99FCCD4A5CD71D5109">
           </div>
           <div class="inner">
-            <strong>STEP.1</strong>
-            <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
-            <p>If you are not sign in, sign into your account first.</p>
-            <p>Click “Try Prime”</p>
-            <!-- <a href="#n"></a> -->
+            <span>STEP.1</span>
+            <p>- If you are not sign in, sign into your account first.</p>
+            <p>- Then click “Try Prime”</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/9957A3355CD318F503">
+        <div class="blog_ctn">
+         <div class="image_box">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99FD1D4A5CD71D5209">
           </div>
           <div class="inner">
-            <strong>STEP.2</strong>
-            <p>Click “GET STARTED” button</p>
+            <span>STEP.2</span>
+            <p>- Click “GET STARTED” button</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/9957BD355CD318F603">
+        <div class="blog_ctn">
+         <div class="image_box">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99FD4B4A5CD71D5209">
           </div>
           <div class="inner">
-            <strong>STEP.3</strong>
-            <p>If your credit card and address are registered, you could see this page.</p>
-            <p>If Click “Start your 30-day free trial” then your Prime is started.</p>
+            <span>STEP.3</span>
+            <p>- Click “Start your 30-day free trial” then your Prime is started.</p>
+            <p>- If your credit card and address are not registered, you will be redirect registration page.</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/999C5D415CD31AAB05">
+        <div class="blog_ctn">
+         <div class="image_box">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99FDA54A5CD71D5309">
           </div>
           <div class="inner">
-            <strong>STEP.4</strong>
-            <p>If your credit card and address are not registered, you could see this page.</p>
-            <p>Register your credit card and Click “Start your 30-day free trial”</p>
+            <span>STEP.4</span>
+            <p>- Congratulations!! After become Prime member you can see that is changed  "Try Prime" to "Prime”</p>
+            <p>- Once the trial period is over, your credit card will be charged $119($12.99 per month) for the year of Amazon Prime membership.</p>
+            <p>- If you don’t want to be Prime Member anymore, you have to cancel it before the free trial is over.</p>
+          </div>
+        </div>
+        
+        <div class="blog2sub_title"> 
+         <h2>How to cancel your Amazon Prime membership</h2>
+         <p>If you decide to end your Amazon Prime membership before the free trial is over and you don't want it anymore, you can cancel at any time.</p>
+        </div>
+
+        <div class="blog_ctn">
+          <div class="image_box">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99FE9D4A5CD71D5309">
+          </div>
+          <div class="inner">
+            <span>STEP.1</span>
+            <p>- Click "Your Prime Membership" of your "Account & Lists"</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99A0A2415CD31AAB04">
+        <div class="blog_ctn">
+         <div class="image_box">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99FEDB4A5CD71D5309">
           </div>
           <div class="inner">
-            <strong>STEP.5</strong>
-            <p>You will receive confirm of Amazon Prime Free Trial” email from Amazon.</p>
+            <span>STEP.2</span>
+            <p>- You can check your prime status(Free Trial) and you can confirm that the payment has not yet been made.</p>
+            <p>- Click “End Trial and Benefits on the left sidebar”</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99A0C7415CD31AAB04">
+        <div class="blog_ctn">
+         <div class="image_box size_con">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99FD9F4A5CD71D5409">
           </div>
           <div class="inner">
-            <strong>STEP.6</strong>
-            <p>After become Prime member you can see that is changed  "Try Prime" to "Prime”</p>
-            <p>Once the trial period is over, your credit card will be charged $119($12.99 per month) for the year of Amazon Prime membership.</p>
-            <p>If you don’t want to be Prime Member anymore, you have to cancel it before the free trial is over.</p>
+            <span>STEP.3</span>
+            <p>- Click “End My Benefits”</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99A0FF415CD31AAC04">
+        <div class="blog_ctn">
+         <div class="image_box size_con">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99992F455CD71D5409">
           </div>
           <div class="inner">
-            <strong>STEP.1</strong>
-            <h2>How to cancel your Amazon Prime membership</h2>
-            <p>If you decide to end your Amazon Prime membership before the free trial is over and you don't want it anymore, you can cancel at any time.</p>
+            <span>STEP.4</span>
+            <p>- Click “Continue to Cancel”</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="">
+        <div class="blog_ctn">
+         <div class="image_box size_con">
+            <img src="https://t1.daumcdn.net/cfile/tistory/999955455CD71D5509">
           </div>
           <div class="inner">
-            <strong>STEP.2</strong>
-            <p>Click “End Trial and Benefits on the left sidebar”</p>
+            <span>STEP.5</span>
+            <p>- Click “Cancel membership”</p>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99A158415CD31AAC04">
+        <div class="blog_ctn">
+         <div class="image_box">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99998E455CD71D5509">
           </div>
           <div class="inner">
-            <strong>STEP.3</strong>
-            <p>Click “End My Benefits”</p>
+            <span>STEP.6</span>
+            <p>- If you see this page, your Free Prime trial is canceled but it is valid for 30-day.</p>
+            <p>- You can upgrade your account to Amazon Prime membership in the future anytime if you change your mind.</p>
+          </div>
+         </div>
+
+         <div class="blog_tit">
+          <div class="inner_btn">
+            <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
+            <a target="_blank" href="/blogs/blog_01">Amazon Prime Benefits</a>
           </div>
         </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99A153415CD31AAC04">
-          </div>
+        </div><!--./blog_body-->
+
+      </div><!--./blog_body-->
+
+      <div class="blog_side">
+        <h2>Latest Featured</h2>
+        <% @recommends.each do |recommend| %>
           <div class="inner">
-            <strong>STEP.4</strong>
-            <p>Click “Continue to Cancel”</p>
+            <%= link_to (image_tag recommend.re_image), recommend %>
+            <em><%= recommend.re_filter %></em>
+            <h3><%= link_to recommend.re_title, recommend %></h3>
           </div>
-        </div>
+        <% end %>
+      </div>
 
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="https://t1.daumcdn.net/cfile/tistory/99A170415CD31AAD04">
-          </div>
-          <div class="inner">
-            <strong>STEP.5</strong>
-            <p>Click “Cancel membership”</p>
-          </div>
-        </div>
-
-        <div class="cnt_wrap clearfix">
-          <div class="image_box">
-            <img src="">
-          </div>
-          <div class="inner">
-            <strong>STEP.6</strong>
-            <p>If you see this page, your Free Prime trial is canceled but it is valid for 30-day</p>
-            <p>You can upgrade your account to Amazon Prime membership in the future anytime if you change your mind.</p>
-
-          </div>
-        </div>
-
-
-      </div><!--./blog_wrap-->
-    </div><!--./wrap-->
-  </div><!--./cu_wrap-->
+   </div><!--./warp-->
+  </div><!--./blogs-->
 </div><!--./layout-->
