--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -46,6 +46,9 @@
   .codes .card_wrap .card .inner>p>a{line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
+  .codes .card_wrap .card .inner>.code_high>address{display:block;}
+  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
+  .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
@@ -88,6 +91,9 @@
   .codes .card_wrap .card .inner>p>a{font-size:13px;line-height:1.4;height:auto;overflow:visible;margin:10px 0 0 0;text-decoration:none;color:#000;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
+  .codes .card_wrap .card .inner>.code_high>address{display:block;}
+  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;}
+  .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>em{font-size:13px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
