--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -135,12 +135,12 @@
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .inner{float:left;width:57%;padding:1.5%;font-family: 'Montserrat', sans-serif;font-weight:400;}
   .coupons .coupons_wrap .card .inner .regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
-  .coupons .coupons_wrap .card .inner .regular em{background:#000;padding:0 5px;color:#fff;}
+  .coupons .coupons_wrap .card .inner .regular em{background:#000;padding:0 5px;color:#fff;}  
   .coupons .coupons_wrap .card .inner .shipping_condition{display:block;font-size:12px;}
   .coupons .coupons_wrap .card .inner .shipping_condition>a{color:#08f;text-decoration:none;font-weight:bold;}
   .coupons .coupons_wrap .card .inner .dis_price{font-size:20px;font-weight:bold;margin-right:7px;}
   .coupons .coupons_wrap .card .inner .org_price{color:#616161;text-decoration:line-through;}
-  .coupons .coupons_wrap .card .inner strong{display:block;}
+  .coupons .coupons_wrap .card .inner strong{display:block;color:#08f;font-weight:bold;font-size:25px;border:1px solid #08f;padding:5px 20px;text-align:center;}
   .coupons .coupons_wrap .card .inner h3{font-weight:bold;line-height:1.2;margin-top:5px;}
   .coupons .coupons_wrap .card .inner h3>a{text-decoration:none;color:#000;font-size:17px;}
   .coupons .coupons_wrap .card .inner p{margin:10px 0;line-height:1.2;height:4.8em;overflow:hidden;}
