--- a/app/views/blogs/blog_02.html.erb
+++ b/app/views/blogs/blog_02.html.erb
@@ -6,17 +6,18 @@
       <div class="blog_body">
 
         <div class="blog_tit">
-          <h2><span>How to sign up & cancel Amazon Prime free 30-day trial</span></h2>
+          <h2><span>How to sign up & cancel "Amazon Prime free 30-day trial"</span></h2>
+          <address>May. 12. 2019.</address><em>Oh,i gotta buy this</em>
           <p>Do you have account of Amazon? If you have it, you could upgrade to Amazon Prime and it's as easy as signing up your account in the first place. But if you’re new to Amazon, don’t worry, just follow the step-by-step instructions below.</p>
           <div class="inner_btn">
             <a target="_blank" href="https://amzn.to/2YcWjd1">Try free 30-day trial</a>
             <a target="_blank" href="/blogs/blog_01">Amazon Prime Benefits</a>
           </div>
-          <img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime">
+          <!-- <img src="https://images-na.ssl-images-amazon.com/images/I/41G6zxxNH5L.png" alt="Amazon Prime"> -->
         </div>
          
         <div class="blog2sub_title"> 
-         <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
+         <h2>How to sign up for Amazon Prime if you have an Amazon account already.</h2>
         </div>
         
         <div class="blog_ctn">
