--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -40,9 +40,11 @@
     </a>
   </div>
   <div class="inner">
-    <span class="regular"><em>Coupon</em> Code: FRESH25</span>
+    <span class="regular"><em>Coupon</em></span>
     <h3><a target="_blank" href="https://amzn.to/2H452rS">Take $25 off your first AmazonFresh order of $100 or more.</a></h3>
     <p>This is a limited time offer. Offer good while supplies last. Offer is restricted to select AmazonFresh customers who are recipients of this offer. Offer applies to first-time customer orders. Offer is valid on orders of $100 or more.</p>
+
+    <strong>Code: FRESH25</strong>
 
     <span>Expiration: On going</span>
   </div> 
@@ -239,6 +241,81 @@
     <a href="Product_Link">Shop Now</a>
   </div>
 </div> -->
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2JAmdmK"><img src="https://images-na.ssl-images-amazon.com/images/I/81eqJQ1XDHL._SX522_.jpg" alt="DEWALT DWA2T40IR IMPACT READY FlexTorq Screw Driving Set" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2JAmdmK">DEWALT DWA2T40IR IMPACT READY FlexTorq Screw Driving Set, 40-Piece</a></p>
+    <span class="dis_price">$17.99</span><span class="org_price">$40.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2JAmdmK">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2vZenuJ"><img src="https://m.media-amazon.com/images/I/71pMktGGyRL._AC_UL436_.jpg" alt="Honeywell HT-900 TurboForce Air Circulator Fan" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>63% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2vZenuJ">Honeywell HT-900 TurboForce Air Circulator Fan Black</a></p>
+    <span class="dis_price">$12.91</span><span class="org_price">$34.55</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2vZenuJ">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2JymFlr"><img src="https://m.media-amazon.com/images/I/81ugZ2peAgL._AC_UL436_.jpg" alt="Cuisinart DCC-3200 14-Cup Glass Carafe" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>59% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2JymFlr">Cuisinart DCC-3200 14-Cup Glass Carafe with Stainless Steel Handle Programmable Coffeemaker, Silver</a></p>
+    <span class="dis_price">$74.99</span><span class="org_price">$185.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2JymFlr">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2YlOGRj"><img src="https://m.media-amazon.com/images/I/41XxdmGLy1L._AC_UL436_.jpg" alt="GoWISE USA 3.7-Quart Programmable Air Fryer" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>6% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2YlOGRj">GoWISE USA 3.7-Quart Programmable Air Fryer with 8 Cook Presets</a></p>
+    <span class="dis_price">$59.99</span><span class="org_price">$63.88</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2YlOGRj">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2VycgNY"><img src="https://m.media-amazon.com/images/I/81sHi6kwA0L._AC_UL436_.jpg" alt="K-Cup Carousel" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VycgNY">K-Cup Carousel - Holds 35 K-Cups in Black</a></p>
+    <span class="dis_price">$13.99</span><span class="org_price">$29.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2VycgNY">Shop Now</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
