--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -66,7 +66,8 @@
 .featured .filter-group .filter-node{display:inline-block;box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);padding:15px 10px;margin-bottom:20px;}
 .featured .filter-group .filter-node .inner{font-family: 'Montserrat', sans-serif;font-weight:100;}
 .featured .filter-group .filter-node .inner a{text-decoration:none;color:#616161;}
-.featured .filter-group .filter-node .inner img{width:100%;margin-bottom:5px;}
+.featured .filter-group .filter-node .inner img{width:100%;margin-bottom:5px;-webkit-filter: grayscale(100%);filter: gray;}
+.featured .filter-group .filter-node .inner img:hover{-webkit-filter: grayscale(0%);filter: none;}
 .featured .filter-group .filter-node .inner em{color:#616161;text-transform:uppercase;font-size:15px;border-bottom:1px solid #ccc;display:block;width:30%;}
 .featured .filter-group .filter-node .inner h3{font-size:26px;margin:5px 0;line-height:1.2;font-weight:100;}
 .featured .filter-group .filter-node .inner p{margin-bottom:10px;border-left:5px solid rgba(0, 153, 102, 0.3);padding:10px;}
@@ -104,7 +105,7 @@
 	.featured .rt_cnt{float:left;width:70%;}
   .featured .sm_pc.on{width:25.3%;}
   .featured .sm_pc .filter-search{padding:3px 10px;}
-  .featured .sm_pc .filter-button{font-size:12px;}
+  .featured .sm_pc .filter-button{font-size:27px;}
 	.featured .gift_guide .gift_box{height:auto;}
 	.featured .gift_guide .gift_box .inner{margin:20% 15%;}
 	.featured .filter-group .filter-node .inner em{font-size:10px;}
@@ -330,7 +331,7 @@
 /* End Editor's Pick */
 
 /* Begin Blog Main */
-.blog{}
+.blog{font-family: 'Montserrat', sans-serif;}
 .blog .blog_box{margin:20px 0 50px 0;}
 .blog .date{float:left;width:8%;margin:0 1%;text-align:center;}
 .blog .date em{font-size:30px;font-weight:400;border-bottom:1px solid #ccc;display:inline-block;}
@@ -364,18 +365,19 @@
 /* End Blog Main*/
 
 /* Begin Blog Detail */
-.blogs{margin:300px 0 100px 0 ;}
+.blogs{margin:300px 0 100px 0 ;font-family: 'Montserrat', sans-serif;}
 .blogs .blog_body{float:left;width:60%;margin:0 2.5% 0 2.5%;}
 .blogs .blog_body img{width:100%;}
 .blogs .blog_body h2{font-family: 'Montserrat', sans-serif;line-height:1.2;}
-.blogs .blog_body .blog2sub_title h2{margin-top:20px;}
+.blogs .blog_body .blog2sub_title h2{margin-top:30px;}
 .blogs .blog_body .blog_tit{}
 .blogs .blog_body .blog_tit h2 span{font-size:40px;}
-.blogs .blog_body .blog_tit p{margin-bottom:20px;}
+.blogs .blog_body .blog_tit p{margin:10px 0 20px 0;}
 .blogs .blog_body .blog_tit p a{text-decoration:none;color:#08f;}
+.blogs .blog_body .blog_tit address{display:inline-block;margin-right:5px;}
 .blogs .blog_body .blog_tit .inner_btn{margin-bottom:20px;}
 .blogs .blog_body .blog_tit .inner_btn a{text-decoration:none;background:#08f;color:#fff;padding:10px 30px;}
-.blogs .blog_body .blog_ctn{margin:30px 0;border-bottom:1px solid #ccc;padding-bottom:30px;}
+.blogs .blog_body .blog_ctn{margin:30px 0;border-bottom:1px solid #ccc;padding:30px;}
 .blogs .blog_body .blog_ctn h3{margin:7px 0;font-family: 'Montserrat', sans-serif;}
 .blogs .blog_body .blog_ctn ul{}
 .blogs .blog_body .blog_ctn ul li{padding:5px 0;color:#616161;}
@@ -384,7 +386,7 @@
 .blogs .blog_body .blog_ctn .inner span{background:#000;color:#fff;padding:0 5px;}
 .blogs .blog_body .blog_ctn .inner{margin-top:10px;}
 
-.blogs .blog_side{float:left;width:30%;margin:0 2.5% 0 2.5%;}
+.blogs .blog_side{float:left;width:30%;margin:0 2.5% 0 2.5%;padding:0 20px;}
 .blogs .blog_side img{width:100%;}
 .blogs .blog_side .inner{font-family: 'Montserrat', sans-serif;margin-bottom:35px;}
 .blogs .blog_side .inner em{display:block;border-bottom:1px solid #ccc;width:50%;}
